# yt-shorts-uploader

./: .env.example  .gitignore  LICENSE  README.md  accounts.example.yaml  config.example.yaml  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
src/yt_uploader/: upload.py
src/yt_uploader/engine/: ledger.py  metadata.py  notify.py  settings.py  uploader.py
tests/: test_ledger.py  test_metadata.py  test_notify.py  test_settings.py  test_upload_main.py  test_upload_run.py  test_uploader.py
