[project]
name = "yt-shorts-uploader"
version = "0.1.0"
description = "Upload a folder of MP4 shorts to YouTube, multi-account, metadata-aware."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
upload = "yt_uploader.upload:main"

[project.urls]
Repository = "https://github.com/korosu/yt-shorts-uploader"
Issues = "https://github.com/korosu/yt-shorts-uploader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_uploader"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[dependency-groups]
dev = ["ruff>=0.15.20", "pytest>=8.0"]
